adicionei outra página

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <img src="imagens/aguia.webp" width="200"/>
     </div>
     <div class="bigboy">
-        <img src="imagens/grug.jpg" width="400">
-        <p id="margin" class="texto-grande">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, dolore. Explicabo id quo, neque provident rem perferendis optio quidem atque laboriosam corporis, alias recusandae enim harum obcaecati vitae magni! Sed?</p>
+        <a href="linkinpark.html"><img src="imagens/grug.jpg" width="400"></a>
+        <p id="margin" class="texto-grande"><------ Clica no Grug</p>
     </div>
 </body>
 </html>
